@@ -508,6 +508,10 @@ public class Primitives {
 		thisContext.temporariesInit(size);
 	}
 
+	public static ProtoObject outerContextMethodArgumentAt(ProtoObject receiver, int index) {
+		return receiver.outerContext().argumentAt(index);
+	}
+
 	public static ProtoObject temporaryAt(ProtoObject receiver, ThisContext thisContext, int index, boolean isLocal) {
 		if (isLocal)
 			return thisContext.temporaryAt(index);
@@ -578,11 +582,11 @@ public class Primitives {
 //		System.out.println("send " + receiver + " " + selector + " " + thisContext + " arg: " + arg1 );
 		ProtoMethod method = receiver.cls().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(receiver.cls()), arg1);
+			return method.applyTo(receiver, new ThisContext(receiver.cls(), arg1), arg1);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(receiver.cls().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1), arg1);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1});
 	}
 
@@ -590,11 +594,11 @@ public class Primitives {
 //		System.out.println("send " + receiver + " " + selector + " " + " " + thisContext + " arg1: " + arg1 + " arg2: " + arg2);
 		ProtoMethod method = receiver.cls().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(receiver.cls()), arg1, arg2);
+			return method.applyTo(receiver, new ThisContext(receiver.cls(), arg1, arg2), arg1, arg2);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(receiver.cls().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2), arg1, arg2);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2});
 	}
 
@@ -602,11 +606,11 @@ public class Primitives {
 //		System.out.println("send " + receiver + " " + selector + " " + " " + classMethodWasFoundIn + " arg: " + arg1 );
 		ProtoMethod method = receiver.cls().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(receiver.cls()), arg1, arg2, arg3);
+			return method.applyTo(receiver, new ThisContext(receiver.cls(), arg1, arg2, arg3), arg1, arg2, arg3);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(receiver.cls().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2, arg3);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2, arg3), arg1, arg2, arg3);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2, arg3});
 	}
 
@@ -614,44 +618,44 @@ public class Primitives {
 //		System.out.println("send " + receiver + " " + selector + " " + " " + classMethodWasFoundIn + " arg: " + arg1 );
 		ProtoMethod method = receiver.cls().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(receiver.cls()), arg1, arg2, arg3, arg4);
+			return method.applyTo(receiver, new ThisContext(receiver.cls(), arg1, arg2, arg3, arg4), arg1, arg2, arg3, arg4);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(receiver.cls().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2, arg3, arg4);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2, arg3, arg4), arg1, arg2, arg3, arg4);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2, arg3, arg4});
 	}
 
 	public static ProtoObject send(ProtoObject receiver, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, ProtoObject arg4, ProtoObject arg5, String selector, ThisContext thisContext) {
 		ProtoMethod method = receiver.cls().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(receiver.cls()), arg1, arg2, arg3, arg4, arg5);
+			return method.applyTo(receiver, new ThisContext(receiver.cls(), arg1, arg2, arg3, arg4, arg5), arg1, arg2, arg3, arg4, arg5);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(receiver.cls().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2, arg3, arg4, arg5);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2, arg3, arg4, arg5), arg1, arg2, arg3, arg4, arg5);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2, arg3, arg4, arg5});
 	}
 
 	public static ProtoObject send(ProtoObject receiver, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, ProtoObject arg4, ProtoObject arg5, ProtoObject arg6, String selector, ThisContext thisContext) {
 		ProtoMethod method = receiver.cls().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(receiver.cls()), arg1, arg2, arg3, arg4, arg5, arg6);
+			return method.applyTo(receiver, new ThisContext(receiver.cls(), arg1, arg2, arg3, arg4, arg5, arg6), arg1, arg2, arg3, arg4, arg5, arg6);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(receiver.cls().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2, arg3, arg4, arg5, arg6);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2, arg3, arg4, arg5, arg6), arg1, arg2, arg3, arg4, arg5, arg6);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2, arg3, arg4, arg5, arg6});
 	}
 
 	public static ProtoObject send(ProtoObject receiver, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, ProtoObject arg4, ProtoObject arg5, ProtoObject arg6, ProtoObject arg7, String selector, ThisContext thisContext) {
 		ProtoMethod method = receiver.cls().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(receiver.cls()), arg1, arg2, arg3, arg4, arg5, arg6, arg7);
+			return method.applyTo(receiver, new ThisContext(receiver.cls(), arg1, arg2, arg3, arg4, arg5, arg6, arg7), arg1, arg2, arg3, arg4, arg5, arg6, arg7);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(receiver.cls().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2, arg3, arg4, arg5, arg6, arg7);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2, arg3, arg4, arg5, arg6, arg7), arg1, arg2, arg3, arg4, arg5, arg6, arg7);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2, arg3, arg4, arg5, arg6, arg7});
 	}
 
@@ -671,77 +675,77 @@ public class Primitives {
 //		System.out.println("superSend " + receiver + " " + selector + " " + " " + classMethodWasFoundIn + " arg: " + arg1 );
 		ProtoMethod method = thisContext.classMethodFoundIn.superclass().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass()), arg1);
+			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass(), arg1), arg1);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(thisContext.classMethodFoundIn.superclass().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1), arg1);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1});
 	}
 
 	public static ProtoObject superSend(ProtoObject receiver, ProtoObject arg1, ProtoObject arg2, String selector, ThisContext thisContext) {
 		ProtoMethod method = thisContext.classMethodFoundIn.superclass().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass()), arg1, arg2);
+			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass(), arg1, arg2), arg1, arg2);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(thisContext.classMethodFoundIn.superclass().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2), arg1, arg2);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2});
 	}
 
 	public static ProtoObject superSend(ProtoObject receiver, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, String selector, ThisContext thisContext) {
 		ProtoMethod method = thisContext.classMethodFoundIn.superclass().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass()), arg1, arg2, arg3);
+			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass(), arg1, arg2, arg3), arg1, arg2, arg3);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(thisContext.classMethodFoundIn.superclass().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2, arg3);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2, arg3), arg1, arg2, arg3);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2, arg3});
 	}
 
 	public static ProtoObject superSend(ProtoObject receiver, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, ProtoObject arg4, String selector, ThisContext thisContext) {
 		ProtoMethod method = thisContext.classMethodFoundIn.superclass().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass()), arg1, arg2, arg3, arg4);
+			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass(), arg1, arg2, arg3, arg4), arg1, arg2, arg3, arg4);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(thisContext.classMethodFoundIn.superclass().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2, arg3, arg4);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2, arg3, arg4), arg1, arg2, arg3, arg4);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2, arg3, arg4});
 	}
 
 	public static ProtoObject superSend(ProtoObject receiver, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, ProtoObject arg4, ProtoObject arg5, String selector, ThisContext thisContext) {
 		ProtoMethod method = thisContext.classMethodFoundIn.superclass().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass()), arg1, arg2, arg3, arg4, arg5);
+			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass(), arg1, arg2, arg3, arg4, arg5), arg1, arg2, arg3, arg4, arg5);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(thisContext.classMethodFoundIn.superclass().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2, arg3, arg4, arg5);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2, arg3, arg4, arg5), arg1, arg2, arg3, arg4, arg5);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2, arg3, arg4, arg5});
 	}
 
 	public static ProtoObject superSend(ProtoObject receiver, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, ProtoObject arg4, ProtoObject arg5, ProtoObject arg6, String selector, ThisContext thisContext) {
 		ProtoMethod method = thisContext.classMethodFoundIn.superclass().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass()), arg1, arg2, arg3, arg4, arg5, arg6);
+			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass(), arg1, arg2, arg3, arg4, arg5, arg6), arg1, arg2, arg3, arg4, arg5, arg6);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(thisContext.classMethodFoundIn.superclass().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2, arg3, arg4, arg5, arg6);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2, arg3, arg4, arg5, arg6), arg1, arg2, arg3, arg4, arg5, arg6);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2, arg3, arg4, arg5, arg6});
 	}
 
 	public static ProtoObject superSend(ProtoObject receiver, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, ProtoObject arg4, ProtoObject arg5, ProtoObject arg6, ProtoObject arg7, String selector, ThisContext thisContext) {
 		ProtoMethod method = thisContext.classMethodFoundIn.superclass().methodAt(selector);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass()), arg1, arg2, arg3, arg4, arg5, arg6, arg7);
+			return method.applyTo(receiver, new ThisContext(thisContext.classMethodFoundIn.superclass(), arg1, arg2, arg3, arg4, arg5, arg6, arg7), arg1, arg2, arg3, arg4, arg5, arg6, arg7);
 		ProtoObject[] methodForResult = {null};
 		method = methodFor(thisContext.classMethodFoundIn.superclass().superclass(), selector, methodForResult);
 		if (method != null)
-			return method.applyTo(receiver, new ThisContext(methodForResult[0]), arg1, arg2, arg3, arg4, arg5, arg6, arg7);
+			return method.applyTo(receiver, new ThisContext(methodForResult[0], arg1, arg2, arg3, arg4, arg5, arg6, arg7), arg1, arg2, arg3, arg4, arg5, arg6, arg7);
 		return sendDoesNotUnderstand(receiver, selector, thisContext, new ProtoObject[]{arg1, arg2, arg3, arg4, arg5, arg6, arg7});
 	}
 }
